Added properties to show SQL queries and Stats

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+#Turn on Statistics
+spring.jpa.properties.hibernate.generate_statistics=true;
+
+#To show all queries
+spring.jpa.show-sql=true
+
+#Format the SQL queries -------> DO not use this in production
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.type=trace
