Added Second Level Cache on Course Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,19 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.properties.hibernate.connection.isolation=2
+
+#Second level Cache - EhCache
+
+#1) Enable EhCache
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+
+#2) Specify the Caching Framework
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.internal.EhcacheRegionFactory
+
+#3) Only Cache what I tell to Cache
+spring.jpa.properties.javax.persistance.sharedCache.mode=ENABLE_SELECTIVE
+
+logging.level.net.sf.ehcache=debug
+
+
+#4) What Data to Cache?
